Better use of outputDir & SaveRequest